--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco001/cumco001.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco001/cumco001.component.html
@@ -1,5 +1,5 @@
 <div class="ui-fluid p-grid forms-grid" id="mantenimiento-correspondencia-conenido">
-    <p-checkbox name="groupname" [binary]="true" [(ngModel)]="lang" (onChange)="changeLanguage()"> </p-checkbox>
+    <!-- <p-checkbox name="groupname" [binary]="true" [(ngModel)]="lang" (onChange)="changeLanguage()"> </p-checkbox> -->
 
     <div class="p-col-12 p-md-12">
     <div class="card card-w-title">
